--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 </head>
 
 <body>
-    <svg id="wave" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-        x="0px" y="0px" viewBox="0 -10 440 120" xml:space="preserve">
+    <svg id="wave" class="hide" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        x="0px" y="0px" viewBox="0 -10 480 120" xml:space="preserve">
         <style type="text/css">
+            :root {
+                --anim: 1s cubic-bezier(0.39, 0.575, 0.565, 1);
+            }
+
             line {
                 fill: none;
                 stroke: #f00;
@@ -14,55 +18,86 @@
                 stroke-miterlimit: 10;
                 stroke-linecap: round;
             }
+
+            .hide {
+                opacity: 0;
+                transition: var(--anim);
+            }
+
+            .show {
+                opacity: 1;
+                transition: var(--anim);
+            }
         </style>
     </svg>
+    <!-- <audio id="mp3" src="src/audiello.mp3" type="audio/mpeg"></audio> -->
+    <script>
+        // var mp3 = document.getElementById('mp3');
+        // mp3.play();
+
+        var points = 150;
+        var delay = 500;
+        setTimeout(function () {
+            var svgns = "http://www.w3.org/2000/svg",
+                container = document.getElementById('wave');
+            for (var i = 0; i <= points; i++) {
+                var line = document.createElementNS(svgns, 'line');
+                var spacing = container.clientWidth / (points * 1.825);
+                line.setAttributeNS(null, 'x1', 20 + (spacing * i));
+                line.setAttributeNS(null, 'x2', 20 + (spacing * i));
+                // line.setAttributeNS(null, 'y1', 50 + (spacing * i));
+                // line.setAttributeNS(null, 'y2', 50 + (spacing * i));
+                container.appendChild(line);
+            }
+        }, delay);
+
+        var mouseX, mouseY;
+
+        function mapper(num, in_min, in_max, out_min, out_max) {
+            return (num - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
+        }
+
+        // get mouse coordinates
+        document.addEventListener("mousemove", (e) => {
+            mouseX = mapper(e.clientX / window.innerWidth, 0, 1, 0, 1.5);
+            mouseY = mapper(e.clientY / window.innerHeight, 0, 1, 0, .35);
+            // console.log(mouseX);
+        })
+
+        setTimeout(function () {
+            // animate the SVG
+            var el = document.getElementsByClassName('hide')[0]
+            el.classList.remove('hide');
+            el.classList.add('show');
+            function anim() {
+                document.querySelectorAll('svg line').forEach((c, i) => {
+                    var amp = 1 - (i / points);
+                    var freq = 1 / 50;
+                    var osc_freq = mouseY;
+                    var phase = osc_freq * i;
+                    var t = performance.now();
+                    var norm = mouseX;
+
+                    var maths = 50 + (amp * norm * i) * Math.sin(freq * t + phase);
+
+                    c.setAttribute('y1', maths);
+                    c.setAttribute('y2', maths);
+
+                })
+                requestAnimationFrame(anim);
+            }
+            requestAnimationFrame(anim);
+        }, delay);
+
+        // function decreaseVolume() {
+        //     var el = document.getElementById('mp3');
+        //     el.volume -= 0.1;
+        //     console.log(el.volume);
+        // }
+
+
+    </script>
 </body>
 
-<script>
-    var svgns = "http://www.w3.org/2000/svg",
-        container = document.getElementById('wave');
-    var points = 50;
-    for (var i = 0; i <= points; i++) {
-        var line = document.createElementNS(svgns, 'line');
-        var spacing = container.clientWidth / (points * 1.825);
-        line.setAttributeNS(null, 'x1', 20 + (spacing * i));
-        line.setAttributeNS(null, 'x2', 20 + (spacing * i));
-        // line.setAttributeNS(null, 'y1', 50 + (spacing * i));
-        // line.setAttributeNS(null, 'y2', 50 + (spacing * i));
-        container.appendChild(line);
-    }
-
-    var norm = 1;
-    var mouseX;
-
-    function mapper(num, in_min, in_max, out_min, out_max) {
-        return (num - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
-    }
-
-    // get mouse coordinates
-    document.addEventListener("mousemove", (e) => {
-        mouseX = mapper(e.clientX / window.innerWidth, 0, 1, 0, 5).toFixed(2);
-        // console.log(mouseX);
-    })
-
-    // animate the SVG
-    function anim() {
-        document.querySelectorAll('svg line').forEach((c, i) => {
-            var amp = 1 - i / points;
-            var freq = 1 / 350;
-            var osc_freq = 0.25;
-            var phase = osc_freq * i;
-            var t = performance.now();
-            norm = mouseX;
-
-            var maths = 50 + (amp * norm * i) * Math.sin(freq * t + phase);
-
-            c.setAttribute('y1', maths);
-            c.setAttribute('y2', maths);
-        })
-        requestAnimationFrame(anim);
-    }
-    requestAnimationFrame(anim);
-</script>
 
 </html>
