--- a/waveform.html
+++ b/waveform.html
@@ -1,82 +1,164 @@
 <html>
 
 <head>
-
 </head>
 
 <body>
-    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-        y="0px" viewBox="0 350 1200 100" style="enable-background:new 0 0 0 0; padding: 0px;" xml:space="preserve">
-        <g>
-            <polyline id="wave" />
-        </g>
+    <svg id="wave" class="hide" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        x="0px" y="0px" viewBox="0 -10 480 120" xml:space="preserve">
+        <style type="text/css">
+            :root {
+                --anim: 1s cubic-bezier(0.39, 0.575, 0.565, 1);
+            }
+
+            line {
+                fill: none;
+                stroke: #f00;
+                stroke-width: 4;
+                stroke-miterlimit: 10;
+                stroke-linecap: round;
+            }
+
+            .hide {
+                opacity: 0;
+                transition: var(--anim);
+            }
+
+            .show {
+                opacity: 1;
+                transition: var(--anim);
+            }
+        </style>
     </svg>
+    <audio id="mp3" src="src/audiello.mp3" type="audio/mpeg" volume="0"></audio>
+    <script>
+        var points = 150;
+        var delay = 500;
+
+        var mouseX, mouseY;
+
+        function mapper(num, in_min, in_max, out_min, out_max) {
+            return (num - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
+        }
+
+        // get mouse coordinates
+        document.addEventListener("mousemove", (e) => {
+            mouseX = mapper(e.clientX / window.innerWidth, 0, 1, 0, 1.5);
+            mouseY = mapper(e.clientY / window.innerHeight, 0, 1, 0, .35);
+            // console.log(mouseX);
+        })
+
+        setTimeout(function () {
+            var svgNS = "http://www.w3.org/2000/svg",
+                container = document.getElementById('wave');
+            for (var i = 0; i <= points; i++) {
+                var line = document.createElementNS(svgNS, 'line');
+                var spacing = container.clientWidth / (points * 1.825);
+                line.setAttributeNS(null, 'x1', 20 + (spacing * i));
+                line.setAttributeNS(null, 'x2', 20 + (spacing * i));
+                // line.setAttributeNS(null, 'y1', 50 + (spacing * i));
+                // line.setAttributeNS(null, 'y2', 50 + (spacing * i));
+                container.appendChild(line);
+            }
+
+            // animate the SVG
+            var el = document.getElementsByClassName('hide')[0]
+            el.classList.remove('hide');
+            el.classList.add('show');
+            function anim() {
+                document.querySelectorAll('svg line').forEach((c, i) => {
+                    var amp = 1 - (i / points);
+                    var freq = 1 / 50;
+                    var osc_freq = mouseY;
+                    var phase = osc_freq * i;
+                    var t = performance.now();
+                    var norm = mouseX;
+
+                    var maths = 50 + (amp * norm * i) * Math.sin(freq * t + phase);
+
+                    c.setAttribute('y1', maths);
+                    c.setAttribute('y2', maths);
+
+                })
+                requestAnimationFrame(anim);
+            }
+            requestAnimationFrame(anim);
+        }, delay);
+
+        // to call function 'callback' once by listening to 'type' event, targeting the 'node'
+        function oneTime(node, type, callback) {
+
+            var node = document.getElementById(node);
+            // create event
+            node.addEventListener(type, function (e) {
+                // remove event
+                e.target.removeEventListener(e.type, arguments.callee);
+                // call handler
+                return callback(e);
+            });
+
+        }
+
+        var mp3 = document.getElementById('mp3');
+        mp3.volume = 0;
+        document.getElementById('wave').addEventListener("mouseover", function () {
+            volumeFade('mp3', 1, 25, false);
+        });
+        document.getElementById('wave').addEventListener("mouseout", function () {
+            volumeFade('mp3', 0, 25, true);
+        });
+
+        function volumeFade(which, targetVolume, ms, descending) {
+            var fired;
+            var firedComplete;
+            var which = document.getElementById(which);
+
+            if (fired == true && firedComplete != true) {
+                console.log('already fired!');
+            } else if (firedComplete != false) {
+
+                which.play();
+
+                setInterval(function () {
+                    which.volume = which.volume.toFixed(3);
+
+                    if (which.volume == targetVolume && firedComplete == false) {
+                        // volume fade has completed
+                        firedComplete = true;
+                        // rearm volume fade function
+                        fired = false;
+                        clearInterval(volumeFade);
+                        console.log('volume reached');
+                        return;
+                        // controlla se mettendo firedComplete cambia qualcosa (altrimenti il volume viene alzato e aumentato all'infinito ad ogni ciclo)
+                    } else if (which.volume > targetVolume && descending == true) {
+                        fired = true;
+                        firedComplete = false;
+                        console.log(which.volume + "-");
+                        // Math.min doesn't let sound.volume's value go above one
+                        which.volume = Math.min((which.volume - 0.02), 1);
+                        // controlla se mettendo firedComplete cambia qualcosa (altrimenti il volume viene alzato e aumentato all'infinito ad ogni ciclo)
+                    } else if (which.volume < targetVolume && descending == false) {
+                        fired = true;
+                        firedComplete = false;
+                        console.log(which.volume + "+");
+                        which.volume = Math.min((which.volume + 0.02), 1);
+                    };
+                }, ms)
+            }
+        };
+
+        // for testing purposes
+        // window.onload = function () {
+        //     setTimeout(function () {
+        //         volumeFade(50);
+        //         // setInterval(volumeFadeOut, 50);
+        //     }, 1000)
+        // };
+
+
+    </script>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenLite.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
-<script src="greensock-js-with-customease/src/minified/easing/CustomEase.min.js"></script>
-<script>
-    TweenLite.defaultEase = Sine.easeInOut;
-    TweenLite.set("g", { y: window.innerHeight / 2 });
 
-    var svg = document.querySelector("svg");
-    var wave = document.querySelector("#wave");
-
-    var width = 800;
-    var sinus = new CustomEase("sinus", "M0,0 C0.4,0 0.3,1 0.5,1 0.7,1 0.6,0 1,0");
-
-    var amplitude = 1;
-    var frequency = 20;
-    var segments = 500;
-    var interval = width / segments;
-    var mouseX, mouseY;
-
-    document.addEventListener("mousemove", (e) => {
-        mouseX = e.clientX / window.innerWidth;
-        mouseY = e.clientY / window.innerHeight;
-
-        // console.log(amplitude);
-    });
-
-    for (var i = 0; i < segments; i++) {
-        var norm = 1 - i / segments;
-        var point = wave.points.appendItem(svg.createSVGPoint());
-
-        point.x = i * interval;
-        point.y = (amplitude * 100) / 2 * sinus.getRatio(norm);
-
-        var progress = norm * frequency * (0.5 + sinus.getRatio(norm * 0.75));
-
-        TweenMax.to(point, 0.3, {
-            y: -point.y,
-            repeat: -1,
-            yoyo: true,
-            reversed: true
-        }).progress(-progress);
-    }
-</script>
-<style>
-    body {
-        height: 100vh;
-        background: #111;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-    }
-
-    svg {
-        width: 100%;
-        height: auto;
-    }
-
-    #wave {
-        fill: none;
-        stroke-width: 4;
-        stroke-linecap: round;
-        stroke-linejoin: round;
-        stroke: #fff;
-    }
-</style>
 
 </html>
