--- a/waveform.html
+++ b/waveform.html
@@ -32,11 +32,13 @@
     </svg>
     <audio id="mp3" src="src/audiello.mp3" type="audio/mpeg" volume="0"></audio>
     <script>
-        var points = 150;
+        var points = 50;
         var delay = 500;
 
-        var mouseX, mouseY;
+        var mouseX = 0;
+        var mouseY = 0;
 
+        // function to map some range of values to another range of values
         function mapper(num, in_min, in_max, out_min, out_max) {
             return (num - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
         }
@@ -45,23 +47,22 @@
         document.addEventListener("mousemove", (e) => {
             mouseX = mapper(e.clientX / window.innerWidth, 0, 1, 0, 1.5);
             mouseY = mapper(e.clientY / window.innerHeight, 0, 1, 0, .35);
-            // console.log(mouseX);
         })
 
+        // generate wave dots
+        var svgNS = "http://www.w3.org/2000/svg",
+            container = document.getElementById('wave');
+        for (var i = 0; i <= points; i++) {
+            var line = document.createElementNS(svgNS, 'line');
+            var spacing = container.clientWidth / (points * 1.825);
+            line.setAttributeNS(null, 'x1', 20 + (spacing * i));
+            line.setAttributeNS(null, 'x2', 20 + (spacing * i));
+            line.setAttributeNS(null, 'y1', 50 + (spacing * i));
+            line.setAttributeNS(null, 'y2', 50 + (spacing * i));
+            container.appendChild(line);
+        }
+        // animate the wave dots
         setTimeout(function () {
-            var svgNS = "http://www.w3.org/2000/svg",
-                container = document.getElementById('wave');
-            for (var i = 0; i <= points; i++) {
-                var line = document.createElementNS(svgNS, 'line');
-                var spacing = container.clientWidth / (points * 1.825);
-                line.setAttributeNS(null, 'x1', 20 + (spacing * i));
-                line.setAttributeNS(null, 'x2', 20 + (spacing * i));
-                // line.setAttributeNS(null, 'y1', 50 + (spacing * i));
-                // line.setAttributeNS(null, 'y2', 50 + (spacing * i));
-                container.appendChild(line);
-            }
-
-            // animate the SVG
             var el = document.getElementsByClassName('hide')[0]
             el.classList.remove('hide');
             el.classList.add('show');
@@ -101,27 +102,36 @@
 
         var mp3 = document.getElementById('mp3');
         mp3.volume = 0;
+        var updateInterval = 25;
+
+        // oneTime('wave', 'mouseover', function () {
+        //     volumeFade('mp3', 1, updateInterval, false);
+        // });
+        // oneTime('wave', 'mouseout', function () {
+        //     volumeFade('mp3', 0, updateInterval, true);
+        // });
+
         document.getElementById('wave').addEventListener("mouseover", function () {
-            volumeFade('mp3', 1, 25, false);
+            volumeFade('mp3', 1, updateInterval, false);
         });
         document.getElementById('wave').addEventListener("mouseout", function () {
-            volumeFade('mp3', 0, 25, true);
+            volumeFade('mp3', 0, updateInterval, true);
         });
 
         function volumeFade(which, targetVolume, ms, descending) {
             var fired;
             var firedComplete;
             var which = document.getElementById(which);
+            var increment = 0.02;
 
             if (fired == true && firedComplete != true) {
                 console.log('already fired!');
-            } else if (firedComplete != false) {
-
-                which.play();
+            } else if (fired != true && firedComplete != false) {
 
                 setInterval(function () {
                     which.volume = which.volume.toFixed(3);
 
+                    // if actual volume has reached desired volume AND function has reached target condition...
                     if (which.volume == targetVolume && firedComplete == false) {
                         // volume fade has completed
                         firedComplete = true;
@@ -130,32 +140,32 @@
                         clearInterval(volumeFade);
                         console.log('volume reached');
                         return;
+
                         // controlla se mettendo firedComplete cambia qualcosa (altrimenti il volume viene alzato e aumentato all'infinito ad ogni ciclo)
-                    } else if (which.volume > targetVolume && descending == true) {
+                        // update 15-10-2018_09:03: mettendo firedComplete != true funziona
+                        // D A J E .
+                    } else if (which.volume > targetVolume && descending == true && firedComplete != true) {
                         fired = true;
                         firedComplete = false;
-                        console.log(which.volume + "-");
+                        console.log(which.volume + "--");
+                        // Math.max doesn't let sound.volume's value go below zero
+                        which.volume = Math.max((which.volume - increment), 0);
+
+                    } else if (which.volume < targetVolume && descending == false && firedComplete != true) {
+                        which.play();
+                        fired = true;
+                        firedComplete = false;
+                        console.log(which.volume + "++");
                         // Math.min doesn't let sound.volume's value go above one
-                        which.volume = Math.min((which.volume - 0.02), 1);
-                        // controlla se mettendo firedComplete cambia qualcosa (altrimenti il volume viene alzato e aumentato all'infinito ad ogni ciclo)
-                    } else if (which.volume < targetVolume && descending == false) {
-                        fired = true;
-                        firedComplete = false;
-                        console.log(which.volume + "+");
-                        which.volume = Math.min((which.volume + 0.02), 1);
-                    };
+                        which.volume = Math.min((which.volume + increment), 1);
+
+                    } else if (which.volume == 0) {
+                        firedComplete = true;
+                        which.pause;
+                    }
                 }, ms)
             }
         };
-
-        // for testing purposes
-        // window.onload = function () {
-        //     setTimeout(function () {
-        //         volumeFade(50);
-        //         // setInterval(volumeFadeOut, 50);
-        //     }, 1000)
-        // };
-
 
     </script>
 </body>
