more structure, better CSS classes handling
To-do: check if need of removing inline CSS in HTML tags.

--- a/index.html
+++ b/index.html
@@ -2428,7 +2428,7 @@
     </div>
 
     <!--    /////////    -->
-    <!--    SECTION 1    -->
+    <!--    SECTION 2    -->
     <!--    /////////    -->
     <div class="text-section" id="section-2">
         <div class="flex-container">
@@ -2447,6 +2447,65 @@
             </div>
         </div>
     </div>
+
+    <!--    /////////    -->
+    <!--    SECTION 3    -->
+    <!--    /////////    -->
+    <div class="text-section" id="section-3">
+        <div class="flex-container">
+            <div class="flex-text">
+                <div class="flex-child">
+                    <h2>The Code&nbsp;of&nbsp;Conduct</h2>
+                </div>
+                <p class="flex-child">
+                    The Code of Conduct is a voluntary commitment made by some IT companies like Facebook, Twitter,
+                    YouTube.<br>Its aim is to make sure that requests to remove content are dealt with speedily and it
+                    is
+                    applied on the policy di filtraggio già esistenti dei vari social network.
+                </p>
+            </div>
+            <div class="graph-container">
+                <!-- TIMELINE GOES DOWN HERE -->
+                <div class="undefined-graph" style="height: 500px;"></div>
+                <!-- TIMELINE GOES UPPP HERE -->
+            </div>
+        </div>
+    </div>
+
+    <!--    /////////    -->
+    <!--    SECTION 4    -->
+    <!--    /////////    -->
+    <div class="text-section dark" id="section-4" style="height: 100vh;">
+        <div class="flex-container" style="display: block;">
+            <div class="flex-text" style="justify-content: flex-start; max-width: 860px; margin: 0 auto; margin-top: calc(var(--spacing) * 2);">
+                <div class="flex-child">
+                    <h1>What&nbsp;are&nbsp;you filtering&nbsp;for?</h1>
+                </div>
+            </div>
+            <div class="flex-text" style="justify-content: flex-start; max-width: 860px; margin: 0 auto; margin-top: calc(var(--spacing) * 2);">
+                <div class="flex-child">
+                    <h3>Twitter</h3>
+                    <p style="margin-right: 20px;">Freedom of expression means little if voices are silenced because
+                        people are afraid to <span class="highlighted">speak up</span>. We do not tolerate behavior
+                        that harasses, intimidates, or uses fear to silence another person’s voice. </p>
+                </div>
+                <div class="flex-child">
+                    <h3>Facebook</h3>
+                    <p style="margin-right: 20px;">Non permettiamo su Facebook discorsi di incitazione all'odio perché
+                        creano un ambiente di <span class="highlighted">intimidazione</span> ed <span class="highlighted">esclusione</span>
+                        e, in alcuni casi, possono promuovere violenza reale.</p>
+                </div>
+                <div class="flex-child">
+                    <h3>YouTube</h3>
+                    <p style="margin-right: 20px;">We encourage free speech and try to defend your right to express
+                        <span class="highlighted">unpopular</span> points of view, but we don't permit hate speech.
+                        There is a fine line between what is and what is not considered to be hate speech.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
