--- a/index.html
+++ b/index.html
@@ -10,49 +10,6 @@
 <body>
     <span id="current-line"></span>
     <div class="toc">
-        <ul>
-            <li class="current"><a href="#">Intro</a></li>
-            <li class=""><a href="#">Section 1</a></li>
-            <li class=""><a href="#">Section 2</a></li>
-            <li class=""><a href="#">Section 3</a></li>
-            <li class=""><a href="#">Section 4</a></li>
-        </ul>
-        <script>
-            // scrivi funzione che prenda tutti i titoli delle sezioni h1 e h2 
-            // e li inserisca come tag <li> nell'indice dei contenuti
-            window.onload = function tocTitles() {
-
-            }
-
-            document.addEventListener("scroll", function updateIndicator() {
-                var indicator = document.getElementById("current-line");
-                var currentSection = document.getElementsByClassName("current")[0];
-                var currentSectionHeight = currentSection.getBoundingClientRect();
-                // console.log(currentSectionHeight.top);
-                indicator.style.top = currentSectionHeight.top;
-            })
-
-            var sectionHeights = [];
-            window.onload = function calcHeights() {
-                var sections = document.getElementsByClassName("text-section");
-                for (i = 0; i < sections.length; i++) {
-                    var height = sections[i].offsetTop;
-                    sectionHeights.push(height);
-                    // console.log(height);
-                }
-                console.log(sectionHeights);
-            }
-            document.addEventListener("scroll", function updateSection(e) {
-                var doc = document.documentElement;
-                var top = (window.pageYOffset || doc.scrollTop) - (doc.clientTop || 0);
-                for (i = 0; i < sectionHeights.length; i++) {
-                    if (top == sectionHeights[i]) {
-                        console.log('ciao');
-                        document.querySelectorAll("li.current")
-                    }
-                }
-            })
-        </script>
     </div>
     <div class="hero">
         <div class="hero-caption">
@@ -68,7 +25,7 @@
     <div class="text-section" id="section-1">
         <div class="flex-container">
             <div class="flex-text">
-                <div class="flex-child">
+                <div class="flex-child section-title">
                     <h1>Free speech around&nbsp;the&nbsp;world</h1>
                 </div>
                 <p class="flex-child">
@@ -2411,7 +2368,7 @@
     <div class="text-section" id="section-2">
         <div class="flex-container">
             <div class="flex-text">
-                <div class="flex-child">
+                <div class="flex-child section-title">
                     <h1>EU Steps for&nbsp;fighting online&nbsp;hate&nbsp;speech</h1>
                 </div>
                 <p class="flex-child">
@@ -2432,7 +2389,7 @@
     <div class="text-section" id="section-3">
         <div class="flex-container">
             <div class="flex-text">
-                <div class="flex-child">
+                <div class="flex-child section-title">
                     <h2>The Code&nbsp;of&nbsp;Conduct</h2>
                 </div>
                 <p class="flex-child">
@@ -2456,7 +2413,7 @@
     <div class="text-section dark" id="section-4" style="height: 100vh;">
         <div class="flex-container" style="display: block;">
             <div class="flex-text" style="justify-content: flex-start; max-width: 860px; margin: 0 auto; margin-top: calc(var(--spacing) * 2);">
-                <div class="flex-child">
+                <div class="flex-child section-title">
                     <h1>What&nbsp;are&nbsp;you filtering&nbsp;for?</h1>
                 </div>
             </div>
@@ -2486,10 +2443,10 @@
     <!--    /////////    -->
     <!--    SECTION 5    -->
     <!--    /////////    -->
-    <div class="text-section" id="section-3">
+    <div class="text-section" id="section-5">
         <div class="flex-container">
             <div class="flex-text">
-                <div class="flex-child">
+                <div class="flex-child section-title">
                     <h1>The journey of a&nbsp;reported&nbsp;content</h1>
                 </div>
                 <p class="flex-child">
@@ -2510,10 +2467,10 @@
     <!--    /////////    -->
     <!--    SECTION 6    -->
     <!--    /////////    -->
-    <div class="text-section dark" id="section-3">
+    <div class="text-section dark" id="section-6">
         <div class="flex-container">
             <div class="flex-text">
-                <div class="flex-child">
+                <div class="flex-child section-title">
                     <h2>Reported to deleted ratio</h2>
                 </div>
                 <p class="flex-child">
@@ -2532,16 +2489,146 @@
     </div>
 
 </body>
-
 <script>
+    var sectionHeights = [];
+    var sections = document.getElementsByClassName("flex-container");
     var mouseX, mouseY;
     var toc = document.getElementsByClassName('toc')[0];
+    // contiene tutti i titoli delle sezioni
+    var lis = [];
     var line = document.getElementById('current-line');
+
+    window.onload = (e) => {
+        calcHeights();
+        tocTitles();
+        updateSection(e);
+        updateIndicator();
+    }
+    document.addEventListener("scroll", (e) => {
+        updateSection(e);
+        updateIndicator();
+    });
+
+    // function jump(h) {
+    //     location.href = '';
+    //     var url = location.href;                    // Save down the URL without hash.
+    //     location.href = "#" + h;                    // Go to the target element.
+    //     // history.replaceState(null, null, url);      // Don't like hashes. Changing it back.
+    // }
+
+    function scrollTo(element, to, duration) {
+        if (duration <= 0) return;
+        var difference = to - element.scrollTop;
+        var perTick = difference / duration * 10;
+
+        setTimeout(function () {
+            element.scrollTop = element.scrollTop + perTick;
+            if (element.scrollTop === to) return;
+            scrollTo(element, to, duration - 10);
+        }, 10);
+    }
+
+    // prende tutti i titoli delle sezioni h1 e h2 con classe 'section-title'
+    // e li inserisce come tag <li> nell'indice dei contenuti
+    function tocTitles() {
+        var ul = document.createElement('UL');
+        toc.appendChild(ul);
+        // HTMLCollection dei titoli nel documento HTML
+        liTxt = document.getElementsByClassName('section-title');
+
+        var li;
+        var where;
+        var anchor = document.getElementsByClassName("text-section");
+        
+        for (i = 0; i < liTxt.length; i++) {
+            li = document.createElement('li');
+            // elemento link da inserire dentro ogni 'li'
+            h = document.createElement('a');
+            // setta il collegamento di ogni 'a'
+            where = anchor[i].id;
+            h.href = '#' + where;
+            // prende il primo elemento figlio di 'section-title', cioè i titoli delle sezioni
+            h.innerHTML = liTxt[i].childNodes[1].innerHTML;
+            // inserisce il 'li' in 'ul'
+            ul.appendChild(li);
+            // inserisce il collegamento 'a' in 'li'
+            li.appendChild(h);
+// scrivere funzione per ascoltare il click sui 'li' ed animare scroll verso sezione relativa
+            li.addEventListener("click", (e) => {
+                // console.log(where[i]);
+                // scrollTo(where, 0, 600);
+            });
+            lis.push(li);
+            // valore dato all'inizio
+            if (liTxt[i] == liTxt[0]) {
+                li.classList.add('current');
+            }
+        }
+        // console.log(lis);
+    };
+
+    function calcHeights() {
+        for (i = 0; i < sections.length; i++) {
+            var height = sections[i].offsetTop;
+            sectionHeights.push(height);
+            // console.log(height);
+        }
+        // console.log(sectionHeights);
+    };
+
+    function updateIndicator() {
+        var indicator = document.getElementById("current-line");
+        var currentLi = document.getElementsByClassName("current")[0];
+        var currentLiHeight = currentLi.getBoundingClientRect().top;
+        // console.log(currentLiHeight.top);
+        indicator.style.top = currentLiHeight;
+    };
+    function updateSection(e) {
+        var doc = document.documentElement;
+        var top = (window.pageYOffset || doc.scrollTop) - (doc.clientTop || 0) + (window.innerHeight / 2);
+        // var top = (window.pageYOFfset / window.innerHeight) / 2;
+        // console.log(window.innerHeight);
+
+        for (i = 0; i < sectionHeights.length; i++) {
+            var currSectionHeight = sectionHeights[i];
+            var nextSectionHeight = sectionHeights[i + 1];
+            var oldSectionHeight = sectionHeights[i - 1] || sectionHeights[0];
+            // console.log(oldSectionHeight);
+
+            var oldSection = sections[i - 1] || sections[0];
+            var currSection = sections[i];
+            var nextSection = sections[i + 1];
+
+            var oldLi = document.querySelectorAll('.toc > ul > li')[i - 1];
+            var currLi = document.querySelectorAll('.toc > ul > li')[i];
+            var nextLi = document.querySelectorAll('.toc > ul > li')[i + 1];
+            if (top >= currSectionHeight && top < nextSectionHeight || top >= currSectionHeight && top < document.body.scrollHeight) {
+                // ora sai in quale sezione sei nel documento
+                // console.log('current section: ' + currSection.getAttribute('id') + '— next section: ' + nextSection.getAttribute('id'));
+
+                // ora bisogna selezionare il 'li' corrispondente e mettergli la classe 'current'
+                if (typeof oldLi === "undefined") {
+                    document.querySelectorAll('.toc > ul > li')[0].classList.remove('current');
+                } else {
+                    oldLi.classList.remove('current');
+                };
+                currLi.classList.add('current');
+            }
+            else if (top <= currSectionHeight && top > oldSectionHeight) {
+                oldLi.classList.add('current');
+                currLi.classList.remove('current');
+            }
+        }
+    };
+</script>
+
+
+<script>
     document.addEventListener("mousemove", (e) => {
         mouseX = e.clientX / window.innerWidth;
         // mouseY = e.clientY / window.innerHeight;
         // console.log(mouseX);
-        if (mouseX > 0.85) {
+        if (mouseX > 0.75) {
             toc.classList.add('summon');
             line.classList.add('active');
         } else {
