--- a/hatebase_names.html
+++ b/hatebase_names.html
@@ -12,6 +12,10 @@
             cursor: url('src/assets/cursor.png'), auto;
         } */
 
+        html {
+            background-color: var(--c-1);
+            overflow: hidden;
+        }
         body {
             background-color: var(--c-1);
         }
@@ -23,7 +27,8 @@
         .dot {
             height: var(--dot-size);
             width: var(--dot-size);
-            background-color: #e05363;
+            /* background-color: #e05363; */
+            border: 2.5px solid   #e05363;
             opacity: .45;
             border-radius: 50%;
             display: inline-block;
@@ -33,7 +38,10 @@
             z-index: 1;
 
             transition: opacity calc(var(--a-transition)/1.5) cubic-bezier(.65,0,.15,1),
-                        transform calc(var(--a-transition)/1.5) cubic-bezier(.65,0,.15,1);
+                        transform calc(var(--a-transition)/1.5) cubic-bezier(.65,0,.15,1),
+                        background-color calc(var(--a-transition)/1.5) cubic-bezier(.65,0,.15,1),
+                        border calc(var(--a-transition)/1.5) cubic-bezier(.65,0,.15,1)
+                        ;
             transition-duration: .35s;
         }
 
@@ -41,6 +49,7 @@
             /* transform: scale(1); */
             opacity: .9;
             z-index: 10;
+            border: 2px solid #e05363;
 
             transition: opacity calc(var(--a-transition)/1.5) cubic-bezier(.65,0,.15,1),
                         transform calc(var(--a-transition)/1.5) cubic-bezier(.65,0,.15,1);
@@ -48,8 +57,23 @@
         }
 
         .dot.on {
+            transition: background-color calc(var(--a-transition)/1.5) cubic-bezier(.65,0,.15,1),
+                       transform calc(var(--a-transition)/1.5) cubic-bezier(.65,0,.15,1);
+            transition-duration: .35s;
+
+            background-color: #e05363;
             opacity: .9;
             transform: scale(1.2);
+            z-index: 10;
+        }
+        .dot.onn {
+            transition: background-color calc(var(--a-transition)/1.5) cubic-bezier(.65,0,.15,1),
+                       transform calc(var(--a-transition)/1.5) cubic-bezier(.65,0,.15,1);
+            transition-duration: .35s;
+            /* border: 1px solid #e05363; */
+            /* background-color: rgba(224, 83, 99, .8); */
+            background-color: #e05363;
+            opacity: .9;
             z-index: 10;
         }
 
@@ -87,14 +111,15 @@
             display: inline-block;
             margin: auto;
             margin-left: 50%;
+            margin-top: 70px;
             transform: translate(-50%, 0%);
+            
         }
     </style>
 
 
 
     <div class="graph-container">
-
         <span id="tooltip">
             Prova di testo
         </span>
@@ -174,6 +199,8 @@
                     targetDotScale = this.getAttribute('data-offensiveness');
                     // dots[t].classList.add("hovered");
                     this.style.transform = "scale(" + (targetDotScale * 0.1) + ")";
+                    dots[t].classList.add("onn");
+                    console.log('Aggiungo onn al punto ' + t);
                 }
 
                 if (typeof thisCategory != null && t != dotToIgnore) {
@@ -222,6 +249,7 @@
             for (i = 0; i < dots.length; i++) {
                 dots[i].classList.remove('on');
                 if (i == dotToIgnore) {
+                    dots[i].classList.remove("onn");
                     this.style.transform = "";
                 }
             }
